--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8080",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.7.0",
+    "rss-parser": "^3.13.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.0.3",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~5.0.0",
