--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^1.7.0",
+    "axios": "^1.7.1",
+    "buffer": "^6.0.3",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "rss-parser": "^3.13.0",
+    "stream-http": "^3.2.0",
+    "timers-browserify": "^2.0.12",
+    "url": "^0.11.3",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
