--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --port 8080",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "test": "vitest"
   },
   "dependencies": {
     "axios": "^1.7.1",
     "buffer": "^6.0.3",
     "focus-trap-vue": "^4.0.3",
+    "happy-dom": "^14.11.4",
     "https-browserify": "^1.0.0",
+    "lodash": "^4.17.21",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
@@ -18,14 +21,22 @@
     "stream-http": "^3.2.0",
     "timers-browserify": "^2.0.12",
     "url": "^0.11.3",
+    "vite": "^5.2.12",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
+    "webpack": "^5.91.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@testing-library/vue": "^8.1.0",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.4.6",
+    "jest": "^29.7.0",
+    "jsdom": "^24.1.0",
+    "vitest": "^1.6.0"
   },
   "browserslist": [
     "> 1%",
